[project]
name = "eye-for-blind"
version = "0.1.0"
description = ""
authors = [
    {name = "Suyash Kumar Singh",email = "blogbydev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kaggle (>=1.7.4.5,<2.0.0.0)"
]

[tool.poetry]
packages = [{include = "eye_for_blind", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
