[project]
name = "eye-for-blind"
version = "0.1.0"
description = ""
authors = [
    {name = "Suyash Kumar Singh",email = "blogbydev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensorflow-macos (>=2.16.2,<3.0.0)",
    "tensorflow-metal (>=1.2.0,<2.0.0)",
    "jupyterlab (>=4.4.4,<5.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "numpy (<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "kaggle (>=1.7.4.5,<2.0.0.0)",
    "pandas (>=2.3.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "eye_for_blind", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
